--- a/app/src/main/res/layout/fragment_addresses.xml
+++ b/app/src/main/res/layout/fragment_addresses.xml
@@ -5,16 +5,55 @@
     android:layout_height="match_parent"
     android:background="@color/green_lighter">
 
-    <TextView
-        android:layout_marginTop="10sp"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Наши кофейни"
-        android:textSize="35sp"
-        android:textStyle="bold"
-        android:textColor="@color/green_dark"
-        />
+        android:background="@color/green_light">
+        <ImageView
+            android:layout_marginStart="5sp"
+            android:layout_width="45sp"
+            android:layout_height="45sp"
+            android:src="@drawable/coffee_beans"
+            android:scaleType="centerCrop" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:layout_marginTop="10sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Наши кофейни"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            android:textColor="@color/green_dark"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <ImageView
+            android:layout_width="45sp"
+            android:layout_height="45sp"
+            android:src="@drawable/coffee_beans"
+            android:scaleType="centerCrop"
+            android:layout_marginEnd="5sp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1sp"
+        android:background="@color/black" />
 
     <LinearLayout
         android:orientation="horizontal"
