--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -17,7 +17,7 @@
         />
 
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:layout_marginTop="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
