--- a/app/src/main/res/layout/item_dish.xml
+++ b/app/src/main/res/layout/item_dish.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10sp">
+    android:layout_marginTop="7sp"
+    app:cardCornerRadius="15sp"
+    >
 
     <LinearLayout
         android:orientation="horizontal"
@@ -13,7 +15,9 @@
             android:id="@+id/dish_img"
             android:scaleType="centerCrop"
             android:src="@drawable/app_small"
-            android:layout_margin="7sp"
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="5sp"
+            android:layout_marginStart="10sp"
             android:layout_width="100sp"
             android:layout_height="100sp"/>
 
