--- a/app/src/main/res/layout/item_dish.xml
+++ b/app/src/main/res/layout/item_dish.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="7sp"
     app:cardCornerRadius="15sp"
+    android:id="@+id/dish_card"
     >
 
     <LinearLayout
