--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#2E641A</color>
     <color name="green_light">#CEF8BE</color>
+    <color name="green_lighter">#DAF4D6</color>
+    <color name="green_dark">#153410</color>
+    
+    <color name="coffee_light">#CA8E79</color>
 
     <color name="app_background_color">#DAF4D6</color>
 </resources>
