--- a/app/src/main/res/layout/fragment_addresses.xml
+++ b/app/src/main/res/layout/fragment_addresses.xml
@@ -63,8 +63,8 @@
         android:layout_marginStart="10sp"
         android:layout_marginEnd="10sp">
         <com.google.android.material.textview.MaterialTextView
-            android:text="Выберите ваш город:"
-            android:textSize="20sp"
+            android:text="Ваш город:"
+            android:textSize="22sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -76,7 +76,7 @@
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="160dp"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
