--- a/app/src/main/res/layout/fragment_reg.xml
+++ b/app/src/main/res/layout/fragment_reg.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="CoffeeIN"
+        android:text="CoffeIN"
         android:textSize="55dp"
         android:textStyle="bold"
         android:textColor="@color/green"
