--- a/app/src/main/res/layout/item_coffee_house.xml
+++ b/app/src/main/res/layout/item_coffee_house.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@color/coffee_light"
     app:cardCornerRadius="15sp"
-    android:layout_marginTop="5sp">
+    android:layout_marginTop="8sp">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/coffee_house_img"
             android:src="@drawable/coffee_house"
             android:scaleType="centerCrop"
             android:layout_width="100sp"
@@ -44,8 +45,8 @@
                 android:layout_height="wrap_content"/>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/location"
-                android:text="CoffeeIN на Невском"
+                android:id="@+id/name"
+                android:text="CoffeIN на Невском"
                 android:layout_marginTop="5sp"
                 android:textSize="21sp"
                 android:textStyle="bold"
@@ -55,7 +56,7 @@
 
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/location_full"
+                android:id="@+id/location"
                 android:text="Невский проспект, д.8"
                 android:textSize="18sp"
                 android:layout_marginTop="5sp"
