--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,6 +56,63 @@
         android:layout_height="1sp"
         android:background="@color/black" />
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15sp"
+        android:layout_marginEnd="15sp"
+        android:layout_marginTop="15sp">
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/TextEdits_log_reg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/name">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:textSize="19sp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/green" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/changeName"
+            android:layout_gravity="center"
+            style="@style/NavigationButton"
+            android:text="Сохранить изменения"
+            android:layout_width="250sp"
+            android:layout_height="70sp"
+            android:layout_marginTop="10sp"
+            android:textSize="15sp"
+            android:backgroundTint="@color/green"
+            />
+
+    </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/myOrders"
+        android:layout_gravity="center"
+        style="@style/NavigationButton"
+        android:text="Мои заказы"
+        android:layout_width="300sp"
+        android:layout_height="70sp"
+        android:textSize="19sp"
+        android:layout_marginTop="10sp"
+        android:backgroundTint="@color/green"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/help"
+        android:layout_gravity="center"
+        style="@style/NavigationButton"
+        android:text="Техподдержка"
+        android:layout_width="300sp"
+        android:layout_height="70sp"
+        android:textSize="19sp"
+        android:layout_marginTop="10sp"
+        android:backgroundTint="@color/green"
+        />
 
 </LinearLayout>
