--- a/app/src/main/res/layout/item_coffee_house.xml
+++ b/app/src/main/res/layout/item_coffee_house.xml
@@ -33,12 +33,14 @@
             android:orientation="vertical"
             android:layout_width="260sp"
             android:layout_height="match_parent"
-            android:layout_marginEnd="10sp">
+            android:layout_marginEnd="10sp"
+            android:layout_marginStart="15sp">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/open_time"
                 android:text="Работает с 8:00 до 22:00"
                 android:textSize="15sp"
+                android:layout_marginTop="5sp"
                 android:textColor="@color/green"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
