--- a/app/src/main/res/layout/item_dish.xml
+++ b/app/src/main/res/layout/item_dish.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/dish_img"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             android:src="@drawable/app_small"
             android:layout_marginTop="5sp"
             android:layout_marginBottom="5sp"
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Кофе"
-                android:textSize="30sp"
+                android:textSize="22sp"
                 android:textColor="@color/green_dark"
                 android:textStyle="bold"
                 />
