--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="19sp"
-                android:textColor="@color/green"
+                android:textColor="@color/green_dark"
                 android:inputType="textEmailAddress"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -63,7 +63,7 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/green"
+                android:textColor="@color/green_dark"
                 android:textSize="19sp"
                 android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
