--- a/app/src/main/res/layout/fragment_reg.xml
+++ b/app/src/main/res/layout/fragment_reg.xml
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:textSize="19sp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/green" />
+                android:textColor="@color/green_dark" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="19sp"
-                android:textColor="@color/green"
+                android:textColor="@color/green_dark"
                 android:inputType="textEmailAddress"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,13 +73,13 @@
             android:layout_marginTop="5dp"
             android:hint="@string/password"
             app:endIconMode="password_toggle"
-            app:endIconTint="@color/green">
+            app:endIconTint="@color/green_dark">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/green"
+                android:textColor="@color/green_dark"
                 android:textSize="19sp"
                 android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -91,13 +91,13 @@
             android:layout_marginTop="5dp"
             android:hint="@string/confirm_password"
             app:endIconMode="password_toggle"
-            app:endIconTint="@color/green">
+            app:endIconTint="@color/green_dark">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/green"
+                android:textColor="@color/green_dark"
                 android:textSize="19sp"
                 android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
