--- a/app/src/main/res/layout/item_dish.xml
+++ b/app/src/main/res/layout/item_dish.xml
@@ -12,21 +12,23 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/dish_img"
-            android:scaleType="fitXY"
-            android:src="@drawable/app_small"
-            android:layout_marginTop="5sp"
-            android:layout_marginBottom="5sp"
-            android:layout_marginStart="10sp"
+        <androidx.cardview.widget.CardView
             android:layout_width="100sp"
-            android:layout_height="100sp"/>
+            android:layout_height="100sp"
+            android:layout_margin="10sp"
+            app:cardCornerRadius="15sp">
+            <ImageView
+                android:id="@+id/dish_img"
+                android:scaleType="fitXY"
+                android:src="@drawable/app_small"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
-
 
         <LinearLayout
             android:orientation="vertical"
@@ -40,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Кофе"
-                android:textSize="22sp"
+                android:textSize="21sp"
                 android:textColor="@color/green_dark"
                 android:textStyle="bold"
                 />
