Add full description of every position in menu

--- a/app/src/main/res/layout/item_dish_full.xml
+++ b/app/src/main/res/layout/item_dish_full.xml
@@ -11,14 +11,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/green_lighter">
-        <ImageView
-            android:id="@+id/dish_img"
-            android:scaleType="centerCrop"
-            android:src="@drawable/app_small"
+        <androidx.cardview.widget.CardView
+            android:layout_width="200sp"
+            android:layout_height="200sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10sp"
-            android:layout_width="180sp"
-            android:layout_height="180sp"/>
+            android:background="@color/green_lighter"
+            app:cardCornerRadius="15sp" >
+            <ImageView
+                android:id="@+id/dish_img"
+                android:scaleType="centerCrop"
+                android:src="@drawable/app_small"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:orientation="vertical"
