--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -11,15 +11,18 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/dish_img"
-            android:scaleType="centerCrop"
-            android:src="@drawable/app_small"
-            android:layout_marginTop="5sp"
-            android:layout_marginBottom="5sp"
-            android:layout_marginStart="10sp"
+        <androidx.cardview.widget.CardView
             android:layout_width="100sp"
-            android:layout_height="100sp"/>
+            android:layout_height="100sp"
+            android:layout_margin="10sp"
+            app:cardCornerRadius="15sp">
+            <ImageView
+                android:id="@+id/dish_img"
+                android:scaleType="fitXY"
+                android:src="@drawable/app_small"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="wrap_content"
