--- a/app/src/main/res/layout/fragment_addresses.xml
+++ b/app/src/main/res/layout/fragment_addresses.xml
@@ -55,6 +55,95 @@
         android:layout_height="1sp"
         android:background="@color/black" />
 
+    <com.google.android.material.textview.MaterialTextView
+        android:text="Выбранный адрес:"
+        android:textSize="22sp"
+        android:textColor="@color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="10sp"/>
+
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/coffee_light"
+        app:cardCornerRadius="15sp"
+        android:layout_marginTop="5sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="10sp">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/coffee_house_img"
+                android:src="@drawable/coffee_house"
+                android:scaleType="centerCrop"
+                android:layout_width="100sp"
+                android:layout_height="100sp"
+                android:layout_marginStart="15sp"
+                android:layout_marginTop="5sp"
+                android:layout_marginBottom="5sp"
+                />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="260sp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10sp"
+                android:layout_marginStart="15sp">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/openTimeA"
+                    android:text="Работает с 8:00 до 22:00"
+                    android:textSize="15sp"
+                    android:layout_marginTop="5sp"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/nameA"
+                    android:text="CoffeIN на Невском"
+                    android:layout_marginTop="5sp"
+                    android:textSize="21sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/green_dark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/locationA"
+                    android:text="Невский проспект, д.8"
+                    android:textSize="18sp"
+                    android:layout_marginTop="5sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_marginTop="5sp"
+        android:layout_width="match_parent"
+        android:layout_height="1sp"
+        android:background="@color/black" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -63,7 +152,7 @@
         android:layout_marginStart="10sp"
         android:layout_marginEnd="10sp">
         <com.google.android.material.textview.MaterialTextView
-            android:text="Ваш город:"
+            android:text="Выберите город:"
             android:textSize="22sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
@@ -76,7 +165,7 @@
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="240dp"
+            android:layout_width="210sp"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
