--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:layout_marginTop="10sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,6 +60,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
+        />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/message"
+        android:layout_marginTop="10sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Вы еще не добавили ни один товар"
+        android:visibility="invisible"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="@color/green_dark"
+        android:layout_marginStart="20sp"
+        android:layout_marginEnd="20sp"
         />
 
 </LinearLayout>
