--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -55,16 +55,10 @@
         android:layout_height="1sp"
         android:background="@color/black" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10sp"
-        />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/message"
-        android:layout_marginTop="10sp"
+        android:layout_marginTop="5sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -77,4 +71,63 @@
         android:layout_marginEnd="20sp"
         />
 
+    <LinearLayout
+        android:id="@+id/mainOrder"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/black" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="45sp"
+            android:orientation="horizontal"
+            >
+
+            <com.google.android.material.textview.MaterialTextView
+                android:text="Стоимость заказа:"
+                android:textSize="23sp"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="5sp"
+                />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/finalPrice"
+                android:text="1560 руб."
+                android:textSize="27sp"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:layout_marginStart="5sp"
+                android:layout_marginEnd="10sp"/>
+        </LinearLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/makeOrder"
+            android:layout_marginTop="15sp"
+            android:layout_gravity="center"
+            style="@style/NavigationButton"
+            android:text="Заказать"
+            android:layout_width="210sp"
+            android:layout_height="70sp"
+            android:textSize="19sp"
+            android:backgroundTint="@color/green"
+            />
+
+    </LinearLayout>
 </LinearLayout>
