--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/green_lighter"
     app:cardCornerRadius="15sp"
-    android:layout_marginTop="8sp">
+    android:layout_marginTop="4sp"
+    android:layout_marginBottom="4sp">
 
     <LinearLayout
         android:orientation="horizontal"
