--- a/app/src/main/res/layout/item_order_story.xml
+++ b/app/src/main/res/layout/item_order_story.xml
@@ -7,14 +7,14 @@
     app:cardCornerRadius="15sp">
 
     <LinearLayout
-        android:layout_margin="8sp"
+        android:layout_margin="9sp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/orderTime"
-            android:textSize="19sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             android:textColor="@color/green_dark"
             android:text="28 августа, 15:29"
@@ -22,7 +22,8 @@
             android:layout_height="wrap_content"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_margin="10sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"
             android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -40,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <com.google.android.material.textview.MaterialTextView
-                android:textSize="19sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/green_dark"
                 android:text="Итого"
@@ -54,7 +55,7 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/finalPrice"
-                android:textSize="19sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/green_dark"
                 android:text="159 руб."
@@ -65,16 +66,16 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/reorder"
-            android:layout_marginTop="20sp"
-            android:layout_width="match_parent"
-            android:layout_height="55sp"
-            app:cornerRadius="15sp"
-            android:textColor="@color/white"
-            android:text="Повторить заказ"
-            android:textSize="20sp"
-            android:backgroundTint="@color/green"
+            android:layout_width="290sp"
+            android:layout_height="70sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25sp"
             android:layout_marginBottom="10sp"
-            />
+            android:backgroundTint="@color/green"
+            android:text="Повторить заказ"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:cornerRadius="15sp" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
