--- a/app/src/main/res/layout/item_order_story_small.xml
+++ b/app/src/main/res/layout/item_order_story_small.xml
@@ -12,44 +12,39 @@
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/dish_img"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/app_small"
-            android:layout_marginTop="2sp"
-            android:layout_marginBottom="2sp"
-            android:layout_marginStart="10sp"
+
             android:layout_width="40sp"
             android:layout_height="40sp"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="220sp"
             android:layout_height="wrap_content"
             android:text="Кофе"
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginStart="20sp"
             android:textColor="@color/green_dark"
             android:textStyle="bold"
             />
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/price"
-            android:layout_marginEnd="10sp"
-            android:layout_width="80sp"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="20sp"
+            android:layout_width="100sp"
             android:layout_height="wrap_content"
             android:textColor="@color/green_dark"
             android:layout_gravity="center_vertical"
             android:text="1 x 159"
             android:textStyle="bold"
-            android:gravity="center"
-            android:textSize="20sp"
+            android:gravity="left"
+            android:textSize="18sp"
             android:backgroundTint="@color/green_dark"
             />
 
