--- a/app/src/main/res/layout/item_order_story_small.xml
+++ b/app/src/main/res/layout/item_order_story_small.xml
@@ -21,7 +21,7 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/name"
-            android:layout_width="220sp"
+            android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:text="Кофе"
             android:gravity="center_vertical"
@@ -37,11 +37,11 @@
             android:id="@+id/price"
             android:layout_marginStart="10sp"
             android:layout_marginEnd="20sp"
-            android:layout_width="100sp"
+            android:layout_width="125sp"
             android:layout_height="wrap_content"
             android:textColor="@color/green_dark"
             android:layout_gravity="center_vertical"
-            android:text="1 x 159"
+            android:text="1 x 159 ₽"
             android:textStyle="bold"
             android:gravity="left"
             android:textSize="18sp"
